<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ JBoss, Home of Professional Open Source.
  ~ Copyright 2010, Red Hat, Inc., and individual contributors
  ~ as indicated by the @author tags. See the copyright.txt file in the
  ~ distribution for a full listing of individual contributors.
  ~
  ~ This is free software; you can redistribute it and/or modify it
  ~ under the terms of the GNU Lesser General Public License as
  ~ published by the Free Software Foundation; either version 2.1 of
  ~ the License, or (at your option) any later version.
  ~
  ~ This software is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~ Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public
  ~ License along with this software; if not, write to the Free
  ~ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
  ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jboss.as</groupId>
    <artifactId>jboss-as-remote-via-jmx</artifactId>
    <version>7.0.0-SNAPSHOT</version>

    <name>JBoss Application Server: Remote via jmx</name>

    <packaging>jar</packaging>

    <properties>
        <version.netty>3.2.3.Final</version.netty>
        <version.hornetq>2.2.6.Final</version.hornetq>
        <version.jboss.logging>3.0.0.GA</version.jboss.logging>
        <version.jboss.as>7.0.0.Final</version.jboss.as>
        <version.junit>4.8.2</version.junit>
        <version.arquillian>1.0.0.CR1</version.arquillian>
        <version.shrinkwrap>1.0.0-beta-2</version.shrinkwrap>
        <surefire.memory.args>-Xmx512m</surefire.memory.args>
        <surefire.jpda.args></surefire.jpda.args>
        <surefire.system.args>${surefire.memory.args} ${surefire.jpda.args}</surefire.system.args>
    </properties>

   <repositories>
      <!-- The JBoss Community public repository is a composite repository 
         of several major repositories -->
      <!-- see http://community.jboss.org/wiki/MavenGettingStarted-Users -->
      <repository>
         <id>jboss-public-repository</id>
         <name>JBoss Repository</name>
         <url>http://repository.jboss.org/nexus/content/groups/public</url>
         <!-- These optional flags are designed to speed up your builds by 
            reducing remote server calls -->
         <releases>
            <enabled>true</enabled>
         </releases>
         <snapshots>
            <enabled>false</enabled>
         </snapshots>
      </repository>
   </repositories>

   <pluginRepositories>
      <pluginRepository>
         <id>jboss-public-repository</id>
         <name>JBoss Repository</name>
         <url>http://repository.jboss.org/nexus/content/groups/public</url>
         <releases>
            <enabled>true</enabled>
         </releases>
         <snapshots>
            <enabled>false</enabled>
         </snapshots>
      </pluginRepository>
   </pluginRepositories>


    <build>
        <plugins>
        <!-- Big complex hack just to get @Resource(lookup="foo") -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.jboss.spec.javax.annotation</groupId>
                                    <artifactId>jboss-annotations-api_1.1_spec</artifactId>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                    <compilerArgument>-Djava.endorsed.dirs=${project.build.directory}/endorsed</compilerArgument>
                    <source>1.6</source>
                   <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <enableAssertions>true</enableAssertions>
                    <argLine>${surefire.system.args}</argLine>
                    <systemProperties>
                        <property>
                          <name>jboss.home</name>
                          <value>${jboss.home}</value>
                        </property>
                     </systemProperties>
                    <includes>
                        <include>**/*TestCase.java</include>
                    </includes>
                    <forkMode>once</forkMode>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
        	<plugins>
        		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
        		<plugin>
        			<groupId>org.eclipse.m2e</groupId>
        			<artifactId>lifecycle-mapping</artifactId>
        			<version>1.0.0</version>
        			<configuration>
        				<lifecycleMappingMetadata>
        					<pluginExecutions>
        						<pluginExecution>
        							<pluginExecutionFilter>
        								<groupId>
        									org.apache.maven.plugins
        								</groupId>
        								<artifactId>
        									maven-dependency-plugin
        								</artifactId>
        								<versionRange>
        									[2.1,)
        								</versionRange>
        								<goals>
        									<goal>copy</goal>
        								</goals>
        							</pluginExecutionFilter>
        							<action>
        								<ignore></ignore>
        							</action>
        						</pluginExecution>
        					</pluginExecutions>
        				</lifecycleMappingMetadata>
        			</configuration>
        		</plugin>
        	</plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>all-tests</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>spec</module>
            </modules>
        </profile>
        <!--
            Name: jpda
            Descr: Enable JPDA remote debuging
        -->
        <profile>
          <id>jpda</id>
          <activation>
            <property>
              <name>jpda</name>
            </property>
          </activation>
          <properties>
            <surefire.jpda.args>-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y</surefire.jpda.args>
          </properties>
        </profile>
        <!-- profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.jboss.as</groupId>
                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
                    <version>${project.version}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile -->
        <!--
        Though this mode isn't yet available
        <profile>
            <id>remote</id>
            <activation>
                <property>
                    <name>remote</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.jboss.as</groupId>
                    <artifactId>jboss-as-arquillian2-container-remote</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
         -->
    </profiles>

    <dependencies>
        <dependency>
           <groupId>org.jboss.logging</groupId>
           <artifactId>jboss-logging</artifactId>
           <version>${version.jboss.logging}</version>
        </dependency>
        <!-- Needed for @Resource(lookup=) -->
        <dependency>
           <groupId>org.jboss.spec.javax.annotation</groupId>
           <artifactId>jboss-annotations-api_1.1_spec</artifactId>
           <version>1.0.0.Final</version>
        </dependency>



        <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
           <scope>test</scope>
           <version>${version.junit}</version>
        </dependency>
        <dependency>
           <groupId>org.jboss.as</groupId>
           <artifactId>jboss-as-arquillian-container-remote</artifactId>
           <scope>test</scope>
           <version>${version.jboss.as}</version>
        </dependency>
        <dependency>
           <groupId>org.jboss.as</groupId>
           <artifactId>jboss-as-arquillian-common</artifactId>
           <scope>test</scope>
           <version>${version.jboss.as}</version>
        </dependency>
        <dependency>
           <groupId>org.jboss.as</groupId>
           <artifactId>jboss-as-jmx</artifactId>
           <scope>test</scope>
           <version>${version.jboss.as}</version>
        </dependency>
        <dependency>
          <groupId>org.jboss.arquillian.container</groupId>
          <artifactId>arquillian-container-test-api</artifactId>
          <scope>test</scope>
          <version>${version.arquillian}</version>
        </dependency>
        <dependency>
           <groupId>org.jboss.arquillian.junit</groupId>
           <artifactId>arquillian-junit-container</artifactId>
           <scope>test</scope>
           <version>${version.arquillian}</version>
        </dependency>
        <dependency>
           <groupId>org.jboss.shrinkwrap</groupId>
           <artifactId>shrinkwrap-impl-base</artifactId>
           <scope>test</scope>
           <version>${version.shrinkwrap}</version>
        </dependency>
        <dependency>
          <groupId>org.hornetq</groupId>
            <artifactId>hornetq-core</artifactId>
            <scope>test</scope>
            <version>${version.hornetq}</version>
        </dependency>
        <dependency>
            <groupId>org.hornetq</groupId>
            <artifactId>hornetq-jms</artifactId>
            <scope>test</scope>
            <version>${version.hornetq}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.netty</groupId>
            <artifactId>netty</artifactId>
            <version>${version.netty}</version>
        </dependency>
        
        <!--
        Java EE APIs
         -->
        <dependency>
            <groupId>org.jboss.spec.javax.ejb</groupId>
            <artifactId>jboss-ejb-api_3.1_spec</artifactId>
            <version>1.0.1.Final</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.spec.javax.jms</groupId>
            <artifactId>jboss-jms-api_1.1_spec</artifactId>
            <version>1.0.0.Final</version>
        </dependency>

    </dependencies>

</project>
